// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestBodyPatches generates a patch for a missing request body 1`] = `
Array [
  Object {
    "description": "make request body optional",
    "groupedOperations": Array [
      Object {
        "intent": "make request body optional",
        "operations": Array [
          Object {
            "op": "replace",
            "path": "/requestBody/required",
            "value": false,
          },
        ],
      },
    ],
    "impact": Array [
      "Addition",
      "BackwardsCompatible",
    ],
  },
]
`;

exports[`requestBodyPatches generates a patch for a missing request body 2`] = `
Object {
  "method": "post",
  "pathPattern": "/some-path",
  "requestBody": Object {
    "content": Object {
      "application/json": Object {},
    },
    "required": false,
  },
  "responses": Object {
    "200": Object {
      "description": "success",
    },
  },
}
`;

exports[`requestBodyPatches generates a patch for a unmatched request body content type 1`] = `
Array [
  Object {
    "description": "add 'text/csv' body as a valid request body type",
    "groupedOperations": Array [
      Object {
        "intent": "add text/csv as content type",
        "operations": Array [
          Object {
            "op": "add",
            "path": "/requestBody/content/text~1csv",
            "value": Object {},
          },
        ],
      },
    ],
    "impact": Array [
      "Addition",
      "BackwardsCompatible",
    ],
  },
]
`;

exports[`requestBodyPatches generates a patch for a unmatched request body content type 2`] = `
Object {
  "method": "post",
  "pathPattern": "/some-path",
  "requestBody": Object {
    "content": Object {
      "application/json": Object {},
      "text/csv": Object {},
    },
    "required": true,
  },
  "responses": Object {
    "200": Object {
      "description": "success",
    },
  },
}
`;

exports[`requestBodyPatches generates a patch for an unspecified request body 1`] = `
Array [
  Object {
    "description": "add 'application/json' body as a valid request body type",
    "groupedOperations": Array [
      Object {
        "intent": "add request body to operation",
        "operations": Array [
          Object {
            "op": "add",
            "path": "/requestBody",
            "value": Object {
              "content": Object {},
            },
          },
        ],
      },
      Object {
        "intent": "add application/json as content type",
        "operations": Array [
          Object {
            "op": "add",
            "path": "/requestBody/content/application~1json",
            "value": Object {},
          },
        ],
      },
    ],
    "impact": Array [
      "Addition",
      "BackwardsCompatible",
    ],
  },
]
`;

exports[`requestBodyPatches generates a patch for an unspecified request body 2`] = `
Object {
  "method": "post",
  "pathPattern": "/some-path",
  "requestBody": Object {
    "content": Object {
      "application/json": Object {},
    },
  },
  "responses": Object {
    "200": Object {
      "description": "success",
    },
  },
}
`;
